--- a/packages/be-apolo/tsconfig.json
+++ b/packages/be-apolo/tsconfig.json
@@ -1,8 +1,11 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "moduleResolution": "node",
         "baseUrl": ".",
-        "outDir": "dist",
+        "outDir": "./dist",
+        "rootDir": "./",
         "paths": {"@/*": ["src/*"]}
-    }
+    },
+    "exclude": ["node_modules"]
 }
