--- a/packages/lib-hera/tsconfig.json
+++ b/packages/lib-hera/tsconfig.json
@@ -1,9 +1,20 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "moduleResolution": "node",
         "baseUrl": ".",
-        "outDir": "dist",
-        "paths": {"@/*": ["./src/*"]},
-        "composite": true
-    }
+        "outDir": "./dist",
+        "rootDir": "./",
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
+    },
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
