--- a/packages/lint-zeus/package.json
+++ b/packages/lint-zeus/package.json
@@ -1,13 +1,12 @@
 {
   "name": "@olympus/lint-zeus",
   "version": "1.0.0",
-  "main": ".eslintrc.js",
+  "main": "eslintrc.js",
   "author": "Joisiney Leandro",
   "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
@@ -16,7 +15,13 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
+  },
+  "peerDependencies": {
+    "eslint": "^8.56.0",
     "prettier": "^3.2.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
