--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,22 @@
         "target": "ES2021",
         "module": "commonjs",
         "resolveJsonModule": true,
+        "importHelpers": true,
         "esModuleInterop": true,
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
+        "allowSyntheticDefaultImports": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
         "composite": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "declaration": true
     },
     "references": [
         {
             "path": "packages/lib-hera",
             "composite": true
-        },
-        {
-            "path": "packages/lint-zeus",
-            "composite": true
         }
-    ]
+    ],
+    "exclude": ["node_modules"]
 }
