--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "packageManager": "yarn@1.22.19",
   "scripts": {
     "start:dev:apolo": "cd apps/be-apolo && yarn start:dev",
-    "start:dev": "npm-run-all --parallel start:dev:apolo",
+    "start:dev": "yarn start:dev:apolo",
     "build:apolo": "cd apps/be-apolo && yarn build",
     "build:hera": "cd packages/lib-hera && yarn build",
-    "build": "npm-run-all --parallel build:hera build:apolo",
+    "build": "yarn build:hera & yarn build:apolo",
     "start:apolo": "cd apps/be-apolo && yarn start",
-    "start": "npm-run-all --parallel start:apolo",
+    "start": "yarn start:apolo",
     "lint:apolo": "cd apps/be-apolo && yarn lint",
-    "lint": "npm-run-all --parallel lint:apolo",
+    "lint": "yarn lint:apolo",
     "lint:fix:apolo": "cd apps/be-apolo && yarn lint:fix",
     "lint:fix:hera": "cd packages/lib-hera && yarn lint:fix",
-    "lint:fix": "npm-run-all --parallel lint:fix:apolo lint:fix:hera"
+    "lint:fix": "yarn lint:fix:apolo & yarn lint:fix:hera"
   },
   "engines": {
     "node": ">=v20.9.0"
