--- a/apps/fe-rn-atena/tsconfig.json
+++ b/apps/fe-rn-atena/tsconfig.json
@@ -1,14 +1,14 @@
 {
     "extends": "expo/tsconfig.base",
     "compilerOptions": {
-        "jsx": "react",
+        "jsx": "react-jsx",
         "strict": true,
         "baseUrl": "./",
         "paths": {
         "@/*": ["./src/*"]
         }
     },
-    "include": ["./App.tsx", "./src/**/*.ts", "./src/**/*.tsx"],
+    "include": ["./src/**/*.ts", "./src/**/*.tsx"],
     "exclude": [
         "node_modules"
     ]
