--- a/apps/fe-rn-atena/tsconfig.json
+++ b/apps/fe-rn-atena/tsconfig.json
@@ -5,7 +5,8 @@
         "strict": true,
         "baseUrl": "./",
         "paths": {
-        "@/*": ["./src/*"]
+        "@/*": ["./src/*"],
+        "@assets/*": ["./assets/*"]
         }
     },
     "include": ["./src/**/*.ts", "./src/**/*.tsx"],
