--- a/apps/fe-rn-atena/package.json
+++ b/apps/fe-rn-atena/package.json
@@ -27,8 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^18.2.55",
-    "@types/react-native": "^0.73.0",
-    "vite": "^5.1.1"
+    "@types/react-native": "^0.73.0"
   },
   "private": true
 }
