--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "packageManager": "yarn@1.22.19",
   "scripts": {
+    "start:dev:atena:android": "cd apps/fe-rn-atena && yarn android",
     "start:dev:apolo": "cd apps/be-apolo && yarn start:dev",
     "start:dev": "yarn start:dev:apolo",
     "build:ceos": "cd apps/domain-ceos && yarn build",
