--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node --env-file=./.env-development --import ./dist/src/infra/server.js",
-    "build": "rm -rf dist && tsc && tsc-alias",
     "start:dev": "node --watch --env-file=./.env-development --import tsx src/infra/server.ts",
+    "build": "rm -rf dist && tsc && tsc-alias",
+    "start:prd": "node --env-file=./.env-development --import ./dist/src/infra/server.js",
     "test": "vitest",
     "lint": "eslint ./ --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix"
