chore: Updating project startup script.

--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start:dev": "node --watch --env-file=./.env-development --import tsx src/infra/server.ts",
+    "start:dev": "node --watch --trace-warnings --env-file=./.env-development --import tsx src/infra/server.ts",
     "build": "rm -rf dist && tsc && tsc-alias",
     "start:prd": "node --env-file=./.env-development --import ./dist/src/infra/server.js",
     "test": "vitest",
