--- a/apps/fe-rn-atena/package.json
+++ b/apps/fe-rn-atena/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-random-uuid": "^0.1.4",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "vite": "^5.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
