--- a/package.json
+++ b/package.json
@@ -6,42 +6,39 @@
   "license": "MIT",
   "packageManager": "yarn@1.22.19",
   "scripts": {
+    "link:all":"yarn install && cd packages/lib-hera && yarn link && cd packages/domain-ceos && yarn link && cd packages/lint-zeus && yarn link",
     "start:prd:apolo": "cd apps/be-apolo && yarn start:prd",
     "start:dev:apolo": "cd apps/be-apolo && yarn start:dev",
-    
     "start:dev:atena:android": "cd apps/fe-rn-atena && yarn android",
     "start:dev:atena:ios": "cd apps/fe-rn-atena && yarn ios",
-    
     "start:prod": "yarn start:prd:apolo",
     "start:dev": "yarn start:dev:apolo",
-
     "build:apolo": "cd apps/be-apolo && yarn build",
     "build:ceos": "cd packages/domain-ceos && yarn build",
     "build:hera": "cd packages/lib-hera && yarn build",
-
     "build": "yarn build:hera & yarn build:apolo & yarn build:ceos",
-    
     "lint:apolo": "cd apps/be-apolo && yarn lint",
     "lint:atena": "cd apps/fe-rn-atena && yarn lint",
     "lint:ceos": "cd packages/domain-ceos && yarn lint",
     "lint:hera": "cd packages/lib-hera && yarn lint",
-
     "lint": "yarn lint:apolo && yarn lint:atena && yarn lint:ceos && yarn lint:hera",
-
     "lint:fix:apolo": "cd apps/be-apolo && yarn lint:fix",
     "lint:fix:atena": "cd apps/fe-rn-atena && yarn lint:fix",
     "lint:fix:ceos": "cd packages/domain-ceos && yarn lint:fix",
     "lint:fix:hera": "cd packages/lib-hera && yarn lint:fix",
-
-    "lint:fix": "yarn lint:fix:apolo && yarn lint:fix:atena && yarn lint:fix:ceos && yarn lint:fix:hera"
+    "lint:fix": "yarn lint:fix:apolo && yarn lint:fix:atena && yarn lint:fix:ceos && yarn lint:fix:hera",
+    "remove:dist": "rm -rf packages/lib-hera/dist && rm -rf packages/domain-ceos/dist && rm -rf apps/be-apolo/dist",
+    "remove:modules": "rm -rf node_modules && rm -rf packages/lib-hera/node_modules && rm -rf packages/lint-zeus/node_modules && rm -rf packages/domain-ceos/node_modules && rm -rf apps/be-apolo/node_modules && rm -rf apps/fe-rn-atena/node_modules",
+    "remove:lock": "rm -rf packages/lib-hera/yarn.lock && rm -rf packages/domain-ceos/yarn.lock && rm -rf apps/be-apolo/yarn.lock && rm -rf apps/fe-rn-atena/yarn.lock",
+    "remove:all": "yarn remove:dist && yarn remove:modules && yarn remove:lock"
   },
   "engines": {
     "node": ">=v20.9.0"
   },
   "dependencies": {
+    "@olympus/domain-ceos": "*",
     "@olympus/lib-hera": "*",
     "@olympus/lint-zeus": "*",
-    "@olympus/domain-ceos": "*",
     "reflect-metadata": "^0.2.1",
     "zod": "^3.22.4"
   },
@@ -55,9 +52,7 @@
     "typescript": "^5.3.3",
     "vitest": "^1.2.2"
   },
-  "peerDependencies": {
-    "typescript": "^5.3.3"
-  },
+  
   "workspaces": {
     "packages": [
       "packages/*",
