--- a/packages/domain-ceos/package.json
+++ b/packages/domain-ceos/package.json
@@ -24,7 +24,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "exports": {
+  "_exports": {
     "./package.json": "./package.json",
     ".": {
       "types": "./dist/src/index.d.ts",
