--- a/packages/lib-hera/package.json
+++ b/packages/lib-hera/package.json
@@ -28,7 +28,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "exports": {
+  "_exports": {
     "./package.json": "./package.json",
     ".": {
       "types": "./dist/src/index.d.ts",
