refactor: Standardizing Eros Architecture

--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
     "lint:apolo": "cd apps/be-apolo && yarn lint",
     "lint:atena": "cd apps/fe-rn-atena && yarn lint",
     "lint:ceos": "cd packages/domain-ceos && yarn lint",
+    "lint:eros": "cd packages/gateway-eros && yarn lint",
     "lint:hera": "cd packages/lib-hera && yarn lint",
-    "lint": "yarn lint:apolo && yarn lint:atena && yarn lint:ceos && yarn lint:hera",
+    "lint": "yarn lint:apolo && yarn lint:atena && yarn lint:ceos && yarn lint:hera && yarn lint:eros",
     "lint:fix:apolo": "cd apps/be-apolo && yarn lint:fix",
     "lint:fix:atena": "cd apps/fe-rn-atena && yarn lint:fix",
     "lint:fix:ceos": "cd packages/domain-ceos && yarn lint:fix",
     "lint:fix:hera": "cd packages/lib-hera && yarn lint:fix",
-    "lint:fix": "yarn lint:fix:apolo && yarn lint:fix:atena && yarn lint:fix:ceos && yarn lint:fix:hera",
-    "remove:dist": "rm -rf packages/lib-hera/dist && rm -rf packages/domain-ceos/dist && rm -rf apps/be-apolo/dist",
-    "remove:modules": "rm -rf node_modules && rm -rf packages/lib-hera/node_modules && rm -rf packages/lint-zeus/node_modules && rm -rf packages/domain-ceos/node_modules && rm -rf apps/be-apolo/node_modules && rm -rf apps/fe-rn-atena/node_modules",
-    "remove:lock": "rm -rf packages/lib-hera/yarn.lock && rm -rf packages/domain-ceos/yarn.lock && rm -rf apps/be-apolo/yarn.lock && rm -rf apps/fe-rn-atena/yarn.lock",
+    "lint:fix:eros": "cd packages/gateway-eros && yarn lint:fix",
+    "lint:fix": "yarn lint:fix:apolo && yarn lint:fix:atena && yarn lint:fix:ceos && yarn lint:fix:hera && yarn lint:fix:eros",
+    "remove:dist": "rm -rf packages/lib-hera/dist && rm -rf packages/domain-ceos/dist && rm -rf apps/be-apolo/dist && rm -rf packages/gateway-eros",
+    "remove:modules": "rm -rf node_modules && rm -rf packages/lib-hera/node_modules && rm -rf packages/lint-zeus/node_modules && rm -rf packages/domain-ceos/node_modules && rm -rf apps/be-apolo/node_modules && rm -rf apps/fe-rn-atena/node_modules && rm -rf packages/gateway-eros/node_modules",
+    "remove:lock": "rm -rf packages/lib-hera/yarn.lock && rm -rf packages/domain-ceos/yarn.lock && rm -rf apps/be-apolo/yarn.lock && rm -rf apps/fe-rn-atena/yarn.lock && rm -rf packages/gateway-eros/yarn.lock",
     "remove:all": "yarn remove:dist && yarn remove:modules && yarn remove:lock"
   },
   "engines": {
