--- a/packages/vitest-kairos/package.json
+++ b/packages/vitest-kairos/package.json
@@ -13,9 +13,10 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^12.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "jsdom": "^24.0.0",
     "react-test-renderer": "^18.2.0",
     "vitest": "^1.2.2"
