--- a/packages/vitest-kairos/package.json
+++ b/packages/vitest-kairos/package.json
@@ -1,32 +1,29 @@
 {
-  "name": "@olympus/vitest-kairos",
+  "name": "vitest-kairos",
   "version": "1.0.0",
-  "author": "Joisiney Leandro",
-  "license": "MIT",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "test": "vitest",
-    "lint": "eslint ./src --ext .ts,.tsx",
-    "lint:fix": "eslint ./src --ext .ts,.tsx --fix"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/react-hooks": "^8.0.1",
-    "@testing-library/react-native": "^12.4.3",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^4.2.1",
-    "jsdom": "^24.0.0",
-    "react-test-renderer": "^18.2.0",
-    "vitest": "^1.2.2"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "vitest"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.20.1",
-    "@vitejs/plugin-react": "4.2.1",
-    "axios": "^1.6.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite": "^5.0.12"
-  }
+    "@types/react": "^18.2.55",
+    "expo": "~50.0.6",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-native": "0.73.4",
+    "jsdom": "^24.0.0",
+    "vite": "^5.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.4.3",
+    "react-test-renderer": "^18.2.0",
+    "vitest": "^1.2.2",
+    "vitest-react-native": "^0.1.5"
+  },
+  "private": true
 }
