--- a/packages/vitest-kairos/package.json
+++ b/packages/vitest-kairos/package.json
@@ -14,13 +14,16 @@
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
-    "jsdom": "^24.0.0",
-    "vite": "^5.1.1"
+    "react-native": "0.73.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@faker-js/faker": "^8.4.1",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.4.3",
+    "@types/react-dom": "^18.0.9",
     "react-test-renderer": "^18.2.0",
     "vitest": "^1.2.2",
     "vitest-react-native": "^0.1.5"
