--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -11,13 +11,26 @@
     "build": "rm -rf dist && tsc && tsc-alias",
     "start:prd": "node --env-file=./.env-development --import ./dist/src/infra/server.js",
     "lint": "eslint ./ --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "docker-up": "docker-compose -f docker-compose.yml up --detach",
+    "docker-down": "docker-compose stop",
+    "typeorm": "typeorm-ts-node-commonjs -d ./src/infra/database/typeorm/data-source/index.ts",
+    "migration:generate": "npm run typeorm migration:generate -o ./src/infra/database/typeorm/migrations/$npm_config_name",
+    "migration:run": "npm run typeorm migration:run"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "date-fns": "^3.3.1",
     "fastify": "^4.26.0",
-    "stacktrace-js": "^2.0.2"
+    "mysql": "^2.18.1",
+    "stacktrace-js": "^2.0.2",
+    "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2"
   }
 }
