--- a/packages/gateway-eros/tsconfig.json
+++ b/packages/gateway-eros/tsconfig.json
@@ -4,6 +4,7 @@
         "jsx": "react-jsx",
         "strict": true,
         "baseUrl": "./",
+        "outDir": "./dist",
         "paths": {
         "@/*": ["./src/*"],
         "@assets/*": ["./assets/*"]
