feat: setup demeter producer kafka

--- a/apps/be-apolo/package.json
+++ b/apps/be-apolo/package.json
@@ -27,13 +27,10 @@
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0"
   },
-  "peerDependencies": {
-    "typescript": "^5.3.3"
-  },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2"
   },
-  "exports": {
+  "*exports": {
     "./package.json": "./package.json",
     ".": {
       "types": "./dist/src/index.d.ts",
