--- a/package.json
+++ b/package.json
@@ -6,51 +6,27 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "test":"cd packages/vitest-kairos && yarn test",
-    "link:all": "yarn install && cd packages/gateway-eros && yarn install && yarn link && cd packages/lib-hera && yarn install && yarn link && cd packages/domain-ceos && yarn install && yarn link && cd packages/lint-zeus && yarn install && yarn link && cd packages/fe-rn-atena && yarn install && yarn link && cd packages/be-apolo && yarn install && yarn link && cd packages/be-demeter && yarn install && yarn link",
-    "start:mysql:apolo": "cd apps/be-apolo && yarn docker-up",
-    "stop:mysql:apolo": "cd apps/be-apolo && yarn docker-down",
-    "start:prd:apolo": "cd apps/be-apolo && yarn start:prd",
-    "start:dev:apolo": "cd apps/be-apolo && yarn start:dev",
-    "start:dev:demeter": "cd apps/be-demeter && yarn start:dev",
-    "start:dev:atena:android": "cd apps/fe-rn-atena && yarn android",
-    "start:dev:atena:ios": "cd apps/fe-rn-atena && yarn ios",
-    "start:prd": "yarn start:prd:apolo",
-    "start:dev": "yarn start:dev:apolo",
-    "build:apolo": "cd apps/be-apolo && yarn build",
-    "build:ceos": "cd packages/domain-ceos && yarn build",
-    "build:hera": "cd packages/lib-hera && yarn build",
-    "build:demeter": "cd packages/be-demeter && yarn build",
-    "build": "yarn build:hera && yarn build:apolo && yarn build:ceos && yarn build:demeter",
-    "lint:apolo": "cd apps/be-apolo && yarn lint",
-    "lint:atena": "cd apps/fe-rn-atena && yarn lint",
-    "lint:ceos": "cd packages/domain-ceos && yarn lint",
-    "lint:eros": "cd packages/gateway-eros && yarn lint",
-    "lint:hera": "cd packages/lib-hera && yarn lint",
-    "lint:kairos": "cd packages/vitest-kairos && yarn lint",
-    "lint:demeter": "cd packages/be-demeter && yarn lint",
-    "lint": "yarn lint:apolo && yarn lint:atena && yarn lint:ceos && yarn lint:hera && yarn lint:eros && yarn lint:kairos && yarn lint:demeter",
-    "lint:fix:apolo": "cd apps/be-apolo && yarn lint:fix",
-    "lint:fix:atena": "cd apps/fe-rn-atena && yarn lint:fix",
-    "lint:fix:ceos": "cd packages/domain-ceos && yarn lint:fix",
-    "lint:fix:hera": "cd packages/lib-hera && yarn lint:fix",
-    "lint:fix:eros": "cd packages/gateway-eros && yarn lint:fix",
-    "lint:fix:kairos": "cd packages/vitest-kairos && yarn lint:fix",
-    "lint:fix:demeter": "cd packages/be-demeter && yarn lint:fix",
-    "lint:fix": "yarn lint:fix:apolo && yarn lint:fix:atena && yarn lint:fix:ceos && yarn lint:fix:hera && yarn lint:fix:eros && yarn lint:fix:kairos && yarn lint:fix:demeter",
-    "remove:dist": "rm -rf packages/lib-hera/dist && rm -rf packages/domain-ceos/dist && rm -rf apps/be-apolo/dist && rm -rf packages/gateway-eros/dist && rm -rf packages/vitest-kairos/dist && rm -rf apps/fe-rn-atena/dist && rm -rf packages/be-demeter/dist",
-    "remove:modules": "rm -rf node_modules && rm -rf packages/lib-hera/node_modules && rm -rf packages/lint-zeus/node_modules && rm -rf packages/domain-ceos/node_modules && rm -rf apps/be-apolo/node_modules && rm -rf apps/fe-rn-atena/node_modules && rm -rf packages/gateway-eros/node_modules && rm -rf packages/vitest-kairos/node_modules && rm -rf packages/be-demeter/node_modules",
-    "remove:lock": "rm -rf packages/lib-hera/yarn.lock && rm -rf packages/domain-ceos/yarn.lock && rm -rf apps/be-apolo/yarn.lock && rm -rf apps/fe-rn-atena/yarn.lock && rm -rf packages/gateway-eros/yarn.lock && rm -rf packages/vitest-kairos/yarn.lock && rm -rf packages/be-demeter/yarn.lock && rm -rf yarn.lock",
-    "remove:all": "yarn remove:dist && yarn remove:modules && yarn remove:lock"
+    "test": "cd packages/vitest-kairos && yarn test",
+    "lint:fix": "yarn workspaces run lint:fix",
+    "lint": "yarn workspaces run lint",
+    "reset": "yarn workspaces run reset && rm -rf node_modules && rm -rf yarn.lock",
+    "build": "yarn workspaces run build",
+    "start": "yarn workspaces run start",
+    "dev": "yarn workspaces run start:dev",
+    "apolo:dev": "yarn workspaces @olympus/be-apolo run start:dev",
+    "apolo:docker-up": "yarn workspaces @olympus/be-apolo run docker-up",
+    "apolo:docker-down": "yarn workspaces @olympus/be-apolo run docker-down",
+    "atena:android": "yarn workspace @olympus/fe-rn-atena run android",
+    "atena:ios": "yarn workspace @olympus/fe-rn-atena run ios"
   },
   "engines": {
     "node": ">=v20.9.0"
   },
   "dependencies": {
     "@olympus/domain-ceos": "*",
-    "@olympus/kafka-persefone": "*",
     "@olympus/fe-rn-atena": "*",
     "@olympus/gateway-eros": "*",
+    "@olympus/kafka-persefone": "*",
     "@olympus/lib-hera": "*",
     "reflect-metadata": "^0.2.1",
     "zod": "^3.22.4"
@@ -70,5 +46,6 @@
       "packages/*",
       "apps/*"
     ]
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
