--- a/apps/be-demeter/package.json
+++ b/apps/be-demeter/package.json
@@ -9,9 +9,10 @@
   "scripts": {
     "start:dev": "node --watch --trace-warnings --env-file=./.env-development --import tsx src/infra/server.ts",
     "build": "rm -rf dist && tsc && tsc-alias",
-    "start:prd": "node --env-file=./.env-development --import ./dist/src/infra/server.js",
+    "start": "node --env-file=./.env-development --import ./dist/src/infra/server.js",
     "lint": "eslint ./ --ext .ts,.tsx",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo"
   },
   "dependencies": {
     "fastify": "^4.26.1",
