--- a/packages/gateway-eros/package.json
+++ b/packages/gateway-eros/package.json
@@ -5,12 +5,13 @@
   "author": "Joisiney Leandro",
   "license": "MIT",
   "scripts": {
-    "start": "node ./dist/src/index.js",
+    "start": "echo 'No start script defined'",
+    "start:dev": "echo 'No start:dev script defined'",
     "build": "rm -rf dist && tsc && tsc-alias",
-    "start:dev": "node --watch --import tsx src/index.ts",
     "test": "vitest",
     "lint": "eslint ./src --ext .ts,.tsx",
-    "lint:fix": "eslint ./src --ext .ts,.tsx --fix"
+    "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
+    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
