--- a/packages/vitest-kairos/package.json
+++ b/packages/vitest-kairos/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "lint:fix": "eslint ./src --ext .ts,.tsx --fix",
+    "reset": "rm -rf .dist && rm -rf node_modules && rm -rf yarn.lock && rm -fr tsconfig.tsbuildinfo",
+    "start": " echo 'No start script defined'",
+    "build": "echo 'No build script defined'",
+    "start:dev": "echo 'No start:dev script defined'"
   },
   "dependencies": {
     "@types/react": "^18.2.55",
