--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "build": "yarn workspaces run build",
     "start": "yarn workspaces run start",
     "dev": "yarn workspaces run start:dev",
-    "apolo:dev": "yarn workspaces @olympus/be-apolo run start:dev",
-    "apolo:docker-up": "yarn workspaces @olympus/be-apolo run docker-up",
-    "apolo:docker-down": "yarn workspaces @olympus/be-apolo run docker-down",
-    "atena:android": "yarn workspace @olympus/fe-rn-atena run android",
-    "atena:ios": "yarn workspace @olympus/fe-rn-atena run ios"
+    "apolo:dev": "cd apps/be-apolo && yarn start:dev",
+    "apolo:docker-up": "cd apps/be-apolo && yarn docker-up",
+    "apolo:docker-down": "cd apps/be-apolo && yarn docker-down",
+    "atena:prebuild": "cd apps/be-apolo && yarn prebuild",
+    "atena:android": "cd apps/be-apolo && yarn android",
+    "atena:ios": "cd apps/be-apolo && yarn ios"
   },
   "engines": {
     "node": ">=v20.9.0"
